Github Action yml update