@@ -141,7 +141,7 @@
 				<version>3.0.0-M4</version>
 				<configuration>
 					<argLine>
-						--illegal-access=permit
+            <!-- no argLine here -->
 					</argLine>
 				</configuration>
 			</plugin>
